# info-h-512-ttrs

./: .gitignore  plan.pages  presentation.key
ttrs/: CMakeLists.txt
ttrs/src/: agent.cc  agent.h  board.cc  board.h  board_evaluation.h  board_representation.h  main.cc  piece.cc  piece.h  random.cc  random.h  spawner.h  types.h  ui.cc  ui.h
ttrs/src/evaluation/: lines.cc  lines.h  ulm.cc  ulm.h
ttrs/src/representation/: column_heights.cc  column_heights.h  top_column_heights.cc  top_column_heights.h
ttrs/src/spawner/: constant.h  random.cc  random.h
